--- a/HurricaneIda_311reports.ipynb
+++ b/HurricaneIda_311reports.ipynb
@@ -400,6 +400,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d00b5d75-cbb2-4be3-8d04-2b2e66c55948",
+   "metadata": {},
+   "source": [
+    "[Click here to view the interactive map](cluster_map.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "28d55df7-5fbf-42dc-9c4f-51bff4ece87a",
@@ -449,9 +457,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6220b63b-384c-408f-9c8e-e7a8fbe031e3",
+   "metadata": {},
+   "source": [
+    "[Click here to view the interactive map](point_map.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7502093c-8e82-4ba1-bdd3-ab56c12431ab",
+   "id": "30fc9a8d-f957-4007-a2ce-3d5b6a9e4128",
    "metadata": {},
    "outputs": [],
    "source": []
